swagger 포맷 수정, 플레이 통계 API 추가
